crates/courier-ftp-proto-ftp/tests/snapshots/listing__listing_fixtures_snapshot@ibmi__ifs.txt.snap
---
source: crates/courier-ftp-proto-ftp/tests/listing.rs
expression: snapshot(&parsed)
input_file: crates/courier-ftp-proto-ftp/tests/listings/ibmi/ifs.txt
---
format: ibm-i
used_fallback_encoding: false
skipped_count: 0
entries:
  - name: home
    kind: dir
    size: ~
    modified: "2024-02-01T09:00:00Z (Second)"
    permissions: ~
    owner: BOB
    group: ~
    hidden: false
  - name: ".profile"
    kind: file
    size: 512
    modified: "2024-02-01T09:01:30Z (Second)"
    permissions: ~
    owner: BOB
    group: ~
    hidden: true
  - name: data file.csv
    kind: file
    size: 1048576
    modified: "2024-02-01T09:02:00Z (Second)"
    permissions: ~
    owner: BOB
    group: ~
    hidden: false
  - name: dev
    kind: dir
    size: ~
    modified: "2024-02-01T09:03:00Z (Second)"
    permissions: ~
    owner: QSYS
    group: ~
    hidden: false
  - name: QDLS
    kind: dir
    size: ~
    modified: "2024-02-01T09:04:00Z (Second)"
    permissions: ~
    owner: QDOC
    group: ~
    hidden: false
skipped: []
