crates/courier-ftp-proto-ftp/tests/snapshots/listing__listing_fixtures_snapshot@ibmi__offset.txt.snap
---
source: crates/courier-ftp-proto-ftp/tests/listing.rs
expression: snapshot(&parsed)
input_file: crates/courier-ftp-proto-ftp/tests/listings/ibmi/offset.txt
---
format: ibm-i
used_fallback_encoding: false
skipped_count: 0
entries:
  - name: report.csv
    kind: file
    size: 102400
    modified: "2024-01-31T11:00:05Z (Second)"
    permissions: ~
    owner: ALICE
    group: ~
    hidden: false
skipped: []
