crates/courier-ftp-proto-ftp/tests/snapshots/listing__listing_fixtures_snapshot@ibmi__spec-examples.txt.snap
---
source: crates/courier-ftp-proto-ftp/tests/listing.rs
expression: snapshot(&parsed)
input_file: crates/courier-ftp-proto-ftp/tests/listings/ibmi/spec-examples.txt
---
format: ibm-i
used_fallback_encoding: false
skipped_count: 0
entries:
  - name: projects
    kind: dir
    size: ~
    modified: "2024-01-31T12:00:05Z (Second)"
    permissions: ~
    owner: ALICE
    group: ~
    hidden: false
  - name: report.csv
    kind: file
    size: 102400
    modified: "2024-01-31T12:00:05Z (Second)"
    permissions: ~
    owner: ALICE
    group: ~
    hidden: false
  - name: MYLIB.LIB
    kind: dir
    size: ~
    modified: "2024-01-30T08:00:00Z (Second)"
    permissions: ~
    owner: QSYS
    group: ~
    hidden: false
  - name: MYFILE.FILE
    kind: dir
    size: ~
    modified: "2024-01-30T08:00:00Z (Second)"
    permissions: ~
    owner: QSYS
    group: ~
    hidden: false
  - name: MBR1.MBR
    kind: file
    size: ~
    modified: ~
    permissions: ~
    owner: ~
    group: ~
    hidden: false
skipped: []
